# video-metadata-reader

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
